--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,20 +1,17 @@
 composer:
-  last:
-  first:
-title:
-id:
-genre:
-scoring:
+  last: Reutter
+  suffix: der Jüngere
+  first: Georg
+title: Requiem
+id: HofR 48/6
+genre: requiem
+scoring: S, A, T, B (solo), 2 S, 2 A, 2 T, 2 B (coro), 2 trb, 2 vl, vla, b, org
 license: cc-by-sa-4.0
 sources:
   B1:
-    siglum:
-    shelfmark:
-    date:
-    rism:
-    url:
-    license:
+    siglum: A-Wn
+    shelfmark: Mus.Hs.16665
+    url: https://data.onb.ac.at/rec/AC14289333
+    license: public domain
     principal: true
 imslp:
-parts:
-  ottoni: Clarino I, II in C\\Timpani in C–G
