updates metadata and changelog

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -21,4 +21,4 @@ sources:
     shelfmark: Mus.Hs.16665
     url: https://data.onb.ac.at/rec/AC14289333
     license: public domain
-imslp:
+imslp: Requiem_HofR_48/6_(Reutter,_Georg)
